test/corpus/comments.txt
================================================================================
File-level comment
================================================================================

CM_ "Generated by test" ;

--------------------------------------------------------------------------------

(source_file
  (comment
    (string)))


================================================================================
Node comment
================================================================================

CM_ BU_ ECU1 "Main engine controller" ;

--------------------------------------------------------------------------------

(source_file
  (comment
    (object_kind)
    (node_ref)
    (string)))


================================================================================
Message comment
================================================================================

CM_ BO_ 100 "Engine telemetry frame" ;

--------------------------------------------------------------------------------

(source_file
  (comment
    (object_kind)
    (integer)
    (string)))


================================================================================
Signal comment
================================================================================

CM_ SG_ 100 EngineSpeed "RPM, scaled 1/8" ;

--------------------------------------------------------------------------------

(source_file
  (comment
    (object_kind)
    (integer)
    (identifier)
    (string)))
