test/corpus/header.txt
================================================================================
VERSION
================================================================================

VERSION "1.0"

--------------------------------------------------------------------------------

(source_file
  (version
    (string)))


================================================================================
NS_ preamble
================================================================================

NS_ :
    NS_DESC_
    CM_
    BA_DEF_
    BA_
    VAL_

--------------------------------------------------------------------------------

(source_file
  (new_symbols
    (ns_symbol)
    (ns_symbol)
    (ns_symbol)
    (ns_symbol)
    (ns_symbol)))


================================================================================
BS_ empty
================================================================================

BS_:

--------------------------------------------------------------------------------

(source_file
  (bit_timing))


================================================================================
BU_ nodes
================================================================================

BU_: ECU1 ECU2 Gateway

--------------------------------------------------------------------------------

(source_file
  (nodes
    (node_list
      (node_ref)
      (node_ref)
      (node_ref))))
